syntax = "proto3";

package proto;

option go_package = "github.com/somen440/saga/proto";

service Saga {
  rpc CreateOrderSaga(CreateOrderSagaRequest) returns (CreateOrderSagaReply) {}
}

message CreateOrderSagaRequest {
  int64 order_id = 1;
  int64 consumer_id = 2;
}

message CreateOrderSagaReply {}
